syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";


import "avenue/financial/protobuf/core/core_messages_description.proto";
import "avenue/financial/protobuf/estimate/estimate_messages_description.proto";



//Platform

option java_multiple_files = true;
option java_package = "com.avenue.financial.services.grpc.proto.estimate";
option java_outer_classname = "EstimateServiceDescriptionProto";

package avenue.rms.protobuf.estimate;

service EstimateServiceProto {

  rpc list (ListEstimateRequestProto) returns (ListEstimateResponseProto) {
  }

  rpc get (GetEstimateRequestProto) returns (GetEstimateResponseProto) {
  }


  rpc add (AddEstimateRequestProto) returns (AddEstimateResponseProto) {
  }

  rpc update (UpdateEstimateRequestProto) returns (UpdateEstimateResponseProto) {
  }

  rpc delete (DeleteEstimateRequestProto) returns (DeleteEstimateResponseProto) {
  }

}

message CountEstimateRequestProto {
  avenue.financial.protobuf.core.RequestParamProto param = 1;
  google.protobuf.StringValue search = 2;
  avenue.financial.protobuf.core.RequestContextProto request_context = 3;
}

message BulkDeleteEstimateRequestProto {
  repeated string id = 1;
  avenue.financial.protobuf.core.RequestContextProto request_context = 2;
}

message BulkDeleteEstimateResponseProto {
  string id = 1;
  string action = 2;
  string message = 3;
  avenue.financial.protobuf.core.StatusTypeProto status = 4;
  repeated avenue.financial.protobuf.estimate.EstimateProto data = 5;
}

message CountEstimateResponseProto {
  int32 limit = 1;
  int32 page_number = 2;
  int32 pages_count = 3;
  int32 total_count = 4;
}

message ListEstimateResponseProto {
  repeated avenue.financial.protobuf.estimate.EstimateProto data = 1;
}

message GetEstimateResponseProto {
  avenue.financial.protobuf.estimate.EstimateProto data = 1;
}

message GetEstimateRequestProto {
  string id = 1;
  avenue.financial.protobuf.core.RequestParamProto param = 2;
  avenue.financial.protobuf.core.RequestContextProto request_context = 3;
}

message ListEstimateRequestProto {
  avenue.financial.protobuf.core.RequestParamProto param = 1;
  google.protobuf.StringValue search = 2;
  avenue.financial.protobuf.core.RequestContextProto request_context = 3;
}




message AddEstimateRequestProto {
  avenue.financial.protobuf.estimate.AddEstimateProto data = 1;
  avenue.financial.protobuf.core.RequestContextProto request_context = 2;
}

message UpdateEstimateRequestProto {
  string id = 1;
  avenue.financial.protobuf.estimate.UpdateEstimateProto data = 2;
  avenue.financial.protobuf.core.RequestContextProto request_context = 3;
}

message DeleteEstimateRequestProto {
  string id = 1;
  avenue.financial.protobuf.core.RequestContextProto request_context = 2;
}


message AddEstimateResponseProto {
  string id = 1;
  string action = 2;
  string message = 3;
  avenue.financial.protobuf.core.StatusTypeProto status = 4;
  avenue.financial.protobuf.estimate.EstimateProto data = 5;
}

message UpdateEstimateResponseProto {
  string id = 1;
  string action = 2;
  string message = 3;
  avenue.financial.protobuf.core.StatusTypeProto status = 4;
  avenue.financial.protobuf.estimate.EstimateProto data = 5;
}

message DeleteEstimateResponseProto {
  string id = 1;
  string action = 2;
  string message = 3;
  avenue.financial.protobuf.core.StatusTypeProto status = 4;
  avenue.financial.protobuf.estimate.EstimateProto data = 5;
}








